# NC.Core/Models/TranslationData.cs
@@ -1,0 +1,7 @@
+﻿namespace NC.Core.Models
+{
+    public class TranslationData : ParameterData
+    {
+        public string Language { get; set; } = null!;
+    }
+}
